Fix footer container too wide

--- a/app/webpacker/src/stylesheets/unt/_containers.scss
+++ b/app/webpacker/src/stylesheets/unt/_containers.scss
@@ -21,3 +21,7 @@
     max-width: 1600px;
   }
 }
+
+.footer-container {
+  max-width: 1600px;
+}
